se finaliza la pagina de de la semana 10, haciendo el responsive correcto

--- a/actividadSemana5_v2/pagina3.html
+++ b/actividadSemana5_v2/pagina3.html
@@ -6,75 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" type="image/jpg" href="./imagenes/logofuego.png">
-    <title>Registro</title>
+    <title>Video</title>
 </head>
+<body>
     <body>
         <header>
             <section class="header-top">
-                <h1 class="hqpag2">REGISTRO</h1>
+                <h1 class="hqpag2">VIDEO DEL DIA</h1>
             </section>
         </header>
         <nav>
             <ul>
                 <li><a href="./paginaweb.html">Inicio</a></li>
+                <li><a href="./index.html">Registro</a></li>
                 <li><a href="./pagina2.html">Fotos</a></li>
-                <li><a href="./pagina3.html">Video</a></li>
             </ul>
         </nav>
-        <section class="articulo1">
-            <article class="text1" style="margin-top: 100px;">
-                <span class="text1">Por favor llenar todos los campos, para acceder a nuestra base de datos. Todos los campos acompañados de un signo * son obligatorios</span>
-                <br></br>
-                <form action="" style="text-align: center">
-                    <label for="inputtexto">
-                        <span>*Nombres:</span>
-                        <input type="text" id="inputtexto" required autocomplete="on">
-                        <br>                    
-                    </label>
-                    <label for="inputtexto">
-                        <span>*Apellidos:</span>
-                        <input type="text" id="inputtexto" required autocomplete="on">
-                        <br>                    
-                    </label>
-                    <label for="inputfecha">
-                        <span>*Fecha de nacimiento:</span>
-                        <input type="date" id="inputfecha" required autocomplete="on">
-                        <br>
-                    </label>
-                    <label for="inputfecha">
-                        <span>*Sexo:</span>
-                        <select id="sexo">
-                            <option value="Hombre">Hombre</option>
-                            <option value="Mujer">Mujer</option>
-                        </select>
-                    </label>
-                    <br>
-                    <label for="inputcorreo">
-                        <span>*Correo electronico:</span>
-                        <input type="number" id="inputnumero" required autocomplete="on">
-                        <br>
-                    </label>
-                    <label for="inputnumero">
-                        <span>Numero de celular:</span>
-                        <input type="number" id="inputnumero">
-                        <br>
-                    </label>
-                    <label for="inputpassword">
-                        <span>*Password:</span>
-                        <input type="password" id="inputpassword">
-                        <br>
-                    </labe>
-                    <label for="inputpassword">
-                        <span>*Confirmar password:</span>
-                        <input type="password" placeholder="Confirm Password" id="confirm_password" required>
-                        <br>
-                    </labe>
-                    <label for="inputsubmit">
-                        <input type="submit" id="inputsubmit">
-                        <br>
-                    </label>
-                </form>
-            </article>
+        <section class="articulo3">
+            <ul class="contenedorvideo">
+                <iframe  class ="video" width="560" height="315" src="https://www.youtube.com/embed/rNPEYG31fQw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <figcaption>© YouTube</figcaption>
+            </ul>
         </section>
         <footer>
             <section class="container-footer-all">
