--- a/actividadSemana5_v2/pagina2.html
+++ b/actividadSemana5_v2/pagina2.html
@@ -18,7 +18,7 @@
         <nav>
             <ul>
                 <li><a href="./paginaweb.html">Inicio</a></li>
-                <li><a href="./pagina1.html">Registro</a></li>
+                <li><a href="./index.html">Registro</a></li>
                 <li><a href="./pagina3.html">Video</a></li>
             </ul>
         </nav>
