--- a/actividadSemana5_v2/paginaweb.html
+++ b/actividadSemana5_v2/paginaweb.html
@@ -22,7 +22,7 @@
         </header>
         <nav>
             <ul>
-                <li><a href="./pagina1.html">Registro</a></li>
+                <li><a href="./index.html">Registro</a></li>
                 <li><a href="./pagina2.html">Fotos</a></li>
                 <li><a href="./pagina3.html">Video</a></li>
             </ul>
