se termina responsive para pagina de la actividad de la semana 10

--- a/actividadSemana5_v2/paginaweb.html
+++ b/actividadSemana5_v2/paginaweb.html
@@ -11,11 +11,11 @@
     <body>
         <header>
             <section class="header-top">
-                <ul>
+                <ul class="logoHeader">
                     <img class="logofuego" src="./imagenes/logofuego.png">
                 </ul>
-                <ul><h1>FIRE-SPACE</h1></ul>
-                <ul class="navegacion">
+                <ul class="tituloHeader"><h1>FIRE-SPACE</h1></ul>
+                <ul class="navegacionHeader">
                     <input type="search" placeholder="Buscar . . .">
                 </ul>
             </section>
@@ -42,69 +42,30 @@
             </article>
         </section>
         <footer>
-            <section class="container-footer-all">
-                <article class="container-body">
-                    <ul class="colum1">
-                        <h1>Mas informacion de la compañia</h1>
-                        <p>
-                            Pagina diseñada con el fin de brindar informacion del día a día,
-                            en el cual vamos a poder ver videos  y fotos actuales, de temas variados.
-                            Esperamos que toda la informacion sea de su agrado.
-                        </p>
-                    </ul>
-                    <ul class="colum2">
-                        <h1>Redes Sociales</h1>
-                        <ul class="row">
-                            <img src="./icon/facebook.png">
-                            <label>Siguenos en Facebook</label>
-                        </ul>
-                        <ul class="row">
-                            <img src="./icon/twitter.png">
-                            <label>Siguenos en Twitter</label>
-                        </ul>
-                        <ul class="row">
-                            <img src="./icon/instagram.png">
-                            <label>Siguenos en Instagram</label>
-                        </ul>
-                        <ul class="row">
-                            <img src="./icon/google-plus.png">
-                            <label>Siguenos en Google Plus</label>
-                        </ul>
-                        <ul class="row">
-                            <img src="./icon/pinterest.png">
-                            <label>Siguenos en Pinteres</label>
-                        </ul>
-                    </ul>
-                    <ul class="colum3">
-                        <h1>Informacion Contactos</h1>
-                        <ul class="row2">
-                            <img src="./icon/house.png">
-                            <label>
-                                Colombia, Medellin 
-                                El salvador
-                                Cr 39b
-                            </label>
-                        </ul>
-                        <ul class="row2">
-                            <img src="./icon/smartphone.png">
-                            <label>+57-320-818-5205</label>
-                        </ul>
-                        <ul class="row2">
-                            <img src="./icon/contact.png">
-                            <label>reyesjp_27@hotmail.com</label>
-                        </ul>
-                    </ul>
-                </article>
+            <section class="datos Personales">
+                <ul>
+                    <li>Juan Pablo Reyes</li>
+                    <li>3208185205</li>
+                    <li>Programacion</li>
+                </ul>
             </section>
-            <section class="container-footer">
-                <article class="footer">
-                    <ul class="copyright">
-                        © 2017 Todos los Derechos Reservados | <a href="">Juan Pablo Reyes Negrette</a>
-                    </ul>
-                    <ul class="information">
-                        <a href="">Informacion Compañia</a> | <a href="">Privacion y Politica</a> | <a href="">Terminos y Condiciones</a>
-                    </ul>
-                </article>
+            <section class="datos Redes">
+                <ul>
+                    <li>
+                        Facebook
+                    </li>
+                    <li>
+                        Instagram
+                    </li>
+                    <li>
+                        Youtube
+                    </li>
+                </ul>
+            </section>
+            <section class="datos Adicionales">
+                <p>
+                    Todos los derechos reservados. 
+                </p>
             </section>
         </footer>
     </body>
